# nonebot-plugin-fursuit_tv

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: auto-merge.yml  release.yml
nonebot-plugin-fursuit_tv-main/: requirements.txt
nonebot-plugin-fursuit_tv-main/src/nonebot_plugin_template/: image_generator.py
nonebot-plugin-fursuit_tv-main/src/nonebot_plugin_template/help/: helptext.txt
src/nonebot_plugin_fursuit_tv/: __init__.py  cache_manager.py  commands.py  config.py  ftvhelp.py  furtvhelp.py  image_generator.py  token_manager.py
src/nonebot_plugin_fursuit_tv/help/: helptext.txt
src/nonebot_plugin_template/: __init__.py  api.py  commands.py  furtvhelp.py  token_manager.py
