[project]
name = "nonebot-plugin-fursuit-tv"
version = "0.1.1"
description = "实现 VDS DEVELOPER 所支持的 fursuit tv 端点"
authors = [
    {name = "yizhixingjianya-cyx", email = "yizhixingjianya@qq.com"},
]
dependencies = [
    "nonebot2>=2.3.1",
    "nonebot-plugin-apscheduler",
    "pydantic>=2.0",
    "httpx",
    "Pillow",
    "aiofiles",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
keywords = ["nonebot", "fursuit", "onebot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Library",
]

[project.urls]
Homepage = "https://github.com/yizhixingjianya-cyx/nonebot-plugin-fursuit_tv"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["src"]

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.4.2",
    "isort>=5.13.2",
    "ruff>=0.4.6",
]

[tool.pdm.scripts]
format = { composite = ["isort . ","black . ","ruff check ."] }
test = "python -c 'print(\">>> Just \\\"pytest -W ignore -s\\\" when you complete your testsuite\")'"


[tool.black]
line-length = 90
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 90
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 90
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901", "T201", "E731", "E402"]

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "basic"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["src"]
builtin_plugins = []